--- a/config/database.yml
+++ b/config/database.yml
@@ -22,4 +22,6 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: sample_app3_production
+  username: sample_app3
+  password: <%= ENV['SAMPLE_APP_DATABASE_PASSWORD'] %>
